2003-11-24  Jakub Jelinek  <jakub@redhat.com>

	* app.c (do_scrub_chars): Add PUT (ch) and ch = GET ()
	when transitioning from states 14 or 15 to 0 or 1.

2003-11-23  Kazu Hirata  <kazu@cs.umass.edu>

	* hash.c: Convert to ISO-C.
	* hash.h: Likewise.
	* input-file.c: Likewise.
	* input-file.h: Likewise.
	* input-scrub.c: Likewise.
	* itbl-ops.c: Likewise.
	* itbl-ops.h: Likewise.

2003-11-23  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-h8300.c (Hmode): Make it global.
	(Smode): Likewise.
	(Nmode): Likewise.
	(SXmode): Likewise.

2003-11-22  Kazu Hirata  <kazu@cs.umass.edu>

	* ehopt.c: Convert to ISO-C.
	* emul.h: Likewise.
	* expr.c: Likewise.
	* expr.h: Likewise.
	* flonum-copy.c: Likewise.
	* flonum-mult.c: Likewise.
	* flonum.h: Likewise.
	* frags.c: Likewise.
	* frags.h: Likewise.

2003-11-22  Alan Modra  <amodra@bigpond.net.au>

	* doc/c-ppc.texi (PowerPC-Pseudo): Add section.

	* app.c (do_scrub_chars): Revert 2003-04-23 and 2003-04-22.

2003-11-21  Kazu Hirata  <kazu@cs.umass.edu>

	* ecoff.c: Convert to ISO-C.
	* ecoff.h: Likewise.

2003-11-22  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (parse_cpu): New function, broken out from..
	(md_parse_option): ..here.
	(ppc_setup_opcodes): New function, broken out from..
	(md_begin): ..here.
	(ppc_machine): Implement .machine pseudo op.

2003-11-20  Kazu Hirata  <kazu@cs.umass.edu>

	* depend.c: Convert to ISO-C.
	* dwarf2dbg.c: Likewise.
	* dwarf2dbg.h: Likewise.

2003-11-20  Kazu Hirata  <kazu@cs.umass.edu>

	* app.c: Convert to ISO-C.
	* as.h: Likewise.
	* atof-generic.c: Likewise.
	* bignum-copy.c: Likewise.
	* bignum.h: Likewise.
	* cgen.c: Likewise.
	* cgen.h: Likewise.
	* cond.c: Likewise.

2003-11-20  DJ Delorie  <dj@redhat.com>

	* config/tc-sh64.c (shmedia_frob_section): Only frob elf32
	sections.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-h8300.c: Make some functions and global
	variables static appropriately.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>
