@@ -1,3 +1,10 @@
+2003-11-24  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* listing.c: Convert to ISO-C.
+	* listing.h: Likewise.
+	* macro.c: Likewise.
+	* macro.h: Likewise.
+
 2003-11-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* app.c (do_scrub_chars): Add PUT (ch) and ch = GET ()
